SERVER-15816 explained upserts against an empty collection shouldn't try to create a collection